Fixed the issue overflow when it comes to bigger screens

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -551,7 +551,7 @@ body {
 }
 .events .eventCarousel {
   padding-inline: 10px;
-  width: 1275px;
+  width: 100%;
   height: 300px;
   display: -ms-grid;
   display: grid;
@@ -732,7 +732,7 @@ body {
   grid-gap: 30px;
   -ms-grid-columns: 1fr 30px 1fr 30px 1fr 30px 1fr 30px 1fr 30px 1fr;
   grid-template-columns: repeat(6, 1fr);
-  width: 1275px;
+  width: 100%;
   height: 430px;
   overflow: scroll;
   margin-top: 30px;
@@ -974,14 +974,14 @@ body {
   margin-top: 70px;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 1fr 20px 1fr 20px 1fr;
+  -ms-grid-columns: 1fr 10px 1fr 10px 1fr;
   grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
+  gap: 10px;
 }
 .categories .cateGrid .gridCard {
-  width: 400px;
+  width: auto;
   height: 350px;
-  padding: 30px 25px;
+  padding: 30px 15px;
   display: -ms-grid;
   display: grid;
   border-radius: 10px;
@@ -1236,6 +1236,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  gap: 60px;
 }
 .aboutUs .MishVish .ourMish {
   -webkit-box-flex: 1;
@@ -1251,6 +1252,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  width: auto;
 }
 .aboutUs .MishVish .ourMish h3 {
   color: #01ACEE;
@@ -1260,7 +1262,7 @@ body {
 }
 .aboutUs .MishVish .ourMish p {
   color: #5a85c5;
-  width: 550px;
+  width: 100%;
   line-height: 25px;
   font-size: 16px;
   text-align: left;
@@ -1279,11 +1281,10 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  padding-left: 140px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border-left: 1px solid #0e2a54;
+  width: auto;
 }
 .aboutUs .MishVish .ourVish h3 {
   color: #01ACEE;
@@ -1294,7 +1295,7 @@ body {
 .aboutUs .MishVish .ourVish p {
   color: #5a85c5;
   font-size: 16px;
-  width: 550px;
+  width: 100%;
   line-height: 25px;
   text-align: left;
 }
