--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -503,7 +503,7 @@
 
     .eventCarousel{
         padding-inline: 10px;
-        width: 1275px;
+        width: 100%;
         height: 300px;
         // background-color: aqua;
         display: grid;
@@ -654,7 +654,7 @@
         place-items: center;
         grid-gap: 30px;
         grid-template-columns: repeat(6, 1fr);
-        width: 1275px;
+        width: 100%;
         height: 430px;
         overflow: scroll;
         margin-top: 30px;
@@ -818,13 +818,14 @@
         margin-top: 70px;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        gap: 20px;
+        gap: 10px;
+        // background-color: brown;
 
         .gridCard{
-            width: 400px;
+            width: auto;
             height: 350px;
             // background-color: aqua;
-            padding: 30px 25px;
+            padding: 30px 15px;
             display: grid;
             border-radius: 10px;
             border: 1px solid $backgroundColor-v;
@@ -1038,6 +1039,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
+        gap: 60px;
 
         .ourMish{
             flex: 1;
@@ -1045,6 +1047,7 @@
             flex-direction: column;
             // align-items: center;
             justify-content: center;
+            width: auto;
 
             h3{
                 color: $PrimaryColor;
@@ -1055,7 +1058,7 @@
 
             p{
                 color: $backgroundColor-v;
-                width: 550px;
+                width: 100%;
                 line-height: 25px;
                 font-size: 16px;
                 text-align: left;
@@ -1071,9 +1074,10 @@
             display: flex;
             flex-direction: column;
             // align-items: flex-end;
-            padding-left: 140px;
+            // padding-left: 140px;
             justify-content: center;
-            border-left: 1px solid $backgroundColor-alt;
+            // border-left: 1px solid $backgroundColor-alt;
+            width: auto;
 
             h3{
                 color: $PrimaryColor;
@@ -1085,7 +1089,7 @@
             p{
                 color: $backgroundColor-v;
                 font-size: 16px;
-                width: 550px;
+                width: 100%;
                 line-height: 25px;
                 text-align: left;
 
